# xapi-python-client

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/xapi_client/: __init__.py  client.py  exceptions.py  lrs.py  sync_client.py  utils.py
src/xapi_client/models/: __init__.py  activity.py  actor.py  common.py  context.py  result.py  statement.py  verb.py
tests/: conftest.py  test_client.py  test_models.py  test_sync_client.py  test_utils.py
tests/fixtures/: sample_statements.json
